# Uni-Work

./: README.md  main.cpp
Menus/: ADMIN.cpp  ADMIN.h  GUI.cpp  GUI.h  TutorialModel.h  USER.cpp
Year 1 - Sem 1/FP/a1-912-Chereji-Iulia/: p1.py  p2.py  p3.py
Year 1 - Sem 1/FP/a10-912-Chereji-Iulia/: iterator.py  test_iterator.py
Year 1 - Sem 1/FP/a12-912-Chereji-Iulia/: ex.py  test.py  test1.py
Year 1 - Sem 1/FP/a4-912-Chereji-Iulia/: README.md
Year 1 - Sem 1/FP/domain/: test_domain.py
Year 1 - Sem 1/FP/repository/: person_repo.py
Year 1 - Sem 1/FP/service/: activity_service.py
Year 1-Sem 2/DSA/HW5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Year 1-Sem 2/OOP/: A1.c
Year 1-Sem 2/OOP/A2-A3/a23-912-Chereji-Iulia-main/: Array.c  Array.h  CMakeLists.txt  Country-Repo.c  Country-Repo.h  Country.c  Country.h  Operations-List.c  Operations-List.h  Service.c  Service.h  UI.c  UI.h  main.c  tests.c  tests.h
Year 2 - Sem 1/Computer Networks/: lab1-dns,dhcp.pkt  lab2-routing,nat,rip,.pkt  lab3.pkt  lab4.pkt  random-gen1.pkt
Year 2 - Sem 1/Databases/: 922-1_CherejiIulia_Lab3.sql  A2-Lab5.sql  A5.sql  HW1-ok.sql  HW1.sql  HW2.sql  HW3.sql  HW4.sql  HW5.sql
Year 2 - Sem 1/PLF/: HW4.txt  HW5-L1.txt  HW6-L2.txt  HW7-L3.txt  L1-practice.txt  L2-practice.txt  L3-practice.txt  P1-practice.txt  P2-practice.txt  P3-practice.txt
domain/: Dyn-Array.h
repo/: CSV.h  HTML.h  Repo.h
service/: Service.cpp
ui/: GUI.h
validators/: Exception_Class.h  Exceptions.cpp
(+327 files in other folders)
